--- a/Front/package.json
+++ b/Front/package.json
@@ -17,22 +17,34 @@
     "@emotion/cache": "11.10.5",
     "@emotion/react": "11.10.6",
     "@emotion/server": "11.10.0",
-    "@emotion/styled": "11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "2.0.16",
+    "@mui/icons-material": "^5.14.16",
     "@mui/lab": "5.0.0-alpha.120",
-    "@mui/material": "5.11.10",
+    "@mui/material": "^5.11.10",
     "@mui/system": "5.11.9",
     "@mui/x-date-pickers": "5.0.19",
     "apexcharts": "3.37.0",
-    "axios": "^1.6.2",
+    "axios": "^1.5.0",
+    "chart.js": "^4.4.0",
     "date-fns": "2.29.3",
     "formik": "2.2.9",
+    "head": "^1.0.0",
+    "jspdf": "^2.5.1",
+    "moment": "^2.29.4",
     "next": "13.1.6",
     "nprogress": "0.2.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-component": "^0.0.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
+    "recharts": "^2.9.3",
     "simplebar-react": "^3.2.1",
     "yup": "1.0.0"
   },
