--- a/Front/Dockerfile
+++ b/Front/Dockerfile
@@ -14,17 +14,5 @@ RUN npm install
 COPY . .
 
 # Build the React app
-RUN npm run build
-
-# Use a lightweight Nginx image for serving the React app
-FROM nginx:alpine
-
-# Copy the build files from the builder stage to the nginx web root
-COPY --from=builder /usr/src/app/build /usr/share/nginx/html
-
-# Expose port 80 to the outside world
-EXPOSE 3000
-
-# Command to run the nginx server
-CMD ["nginx", "-g", "daemon off;"]
+RUN npm run dev
 
