--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 version: '3'
 services:
   express-app:
-    image: backEnd-image
+    image: backend-image
     container_name: express-container
     build:
-      context: ./Back-End
+      context: ./back-End
       dockerfile: Dockerfile
     restart: always
     ports:
       - "3005:3005"
 
   react-app:
-    image: frontEnd-image
+    image: frontend-image
     container_name: react-container
     build:
-      context: ./Front
+      context: ./front
       dockerfile: Dockerfile
     restart: always
     ports:
